create input handles

--- a/src/components/CustomNumber/CustomNumber.scss
+++ b/src/components/CustomNumber/CustomNumber.scss
@@ -19,6 +19,7 @@ input[type="number"]::-webkit-outer-spin-button {
   border: none;
   cursor: pointer;
   text-align: center;
+  font-size: 1.2rem;
 }
 
 .number:focus-visible {
